--- a/TeklaOpenAPIExtensionMethods/TeklaOpenAPIExtensionMethods/TeklaOpenAPIExtensionMethods.csproj
+++ b/TeklaOpenAPIExtensionMethods/TeklaOpenAPIExtensionMethods/TeklaOpenAPIExtensionMethods.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Geometry3d\VectorExtensions.cs" />
     <Compile Include="Geometry3d\UnitVector.cs" />
     <Compile Include="Model\ModelObjectEnumeratorExtensions.cs" />
+    <Compile Include="Model\ModelObjectExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
