--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+ObjDir/
+
 # User-specific files
 *.rsuser
 *.suo
@@ -182,20 +184,20 @@ publish/
 # in these scripts will be unencrypted
 PublishScripts/
 
-# ignoring nuget package is stupid way to loose your mind
+
 # NuGet Packages
 # *.nupkg
 # NuGet Symbol Packages
-# *.snupkg
+*.snupkg
 # The packages folder can be ignored because of Package Restore
-# **/[Pp]ackages/*
+**/[Pp]ackages/*
 # except build/, which is used as an MSBuild target.
-# !**/[Pp]ackages/build/
+!**/[Pp]ackages/build/
 # Uncomment if necessary however generally it will be regenerated when needed
-# #!**/[Pp]ackages/repositories.config
+!**/[Pp]ackages/repositories.config
 # NuGet v3's project.json files produces more ignorable files
-# *.nuget.props
-# *.nuget.targets
+*.nuget.props
+*.nuget.targets
 
 # Microsoft Azure Build Output
 csx/
