--- a/TeklaOpenAPIExtensionMethods/TeklaOpenAPIExtensionMethods/TeklaOpenApiExtensionMethods.nuspec
+++ b/TeklaOpenAPIExtensionMethods/TeklaOpenAPIExtensionMethods/TeklaOpenApiExtensionMethods.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>TeklaOpenApiExtensionMethods</id>
-    <version>2.1.0</version>
+    <version>2.2.0</version>
     <title>TeklaOpenApiExtensionMethods</title>
     <authors>Dawid Dyrcz</authors>
     <owners>Dawid Dyrcz</owners>
@@ -11,7 +11,7 @@
     <projectUrl>https://github.com/dawiddyrcz/Tekla-Open-Api-Extension-Methods</projectUrl>
     <icon>images\icon.png</icon>
     <description>This package contains extension methods to the Tekla Structures Open Api assemblies i.e methods ModelObjectEnumerator.ToList()</description>
-    <releaseNotes>Repaired bug in the ViewBaseExtensions methods and added xml comments</releaseNotes>
+    <releaseNotes>Added preprocessor directive which allow to not include Tekla.Structures.Drawing.dll reference</releaseNotes>
     <copyright>Copyright Dawid Dyrcz 2020</copyright>
     <tags>Tekla Structures Open Api Extension Methods</tags>
 	<dependencies>
