--- a/TeklaOpenAPIExtensionMethods/TestProject/TestProject.csproj
+++ b/TeklaOpenAPIExtensionMethods/TestProject/TestProject.csproj
@@ -86,8 +86,17 @@
     <Compile Include="..\TeklaOpenAPIExtensionMethods\Drawing\DrawingEnumeratorExtension.cs">
       <Link>references\DrawingEnumeratorExtension.cs</Link>
     </Compile>
+    <Compile Include="..\TeklaOpenAPIExtensionMethods\Drawing\DrawingExtensions.cs">
+      <Link>references\DrawingExtensions.cs</Link>
+    </Compile>
     <Compile Include="..\TeklaOpenAPIExtensionMethods\Drawing\DrawingObjectEnumeratorExtension.cs">
       <Link>references\DrawingObjectEnumeratorExtension.cs</Link>
+    </Compile>
+    <Compile Include="..\TeklaOpenAPIExtensionMethods\Drawing\DrawingObjectExtensions.cs">
+      <Link>references\DrawingObjectExtensions.cs</Link>
+    </Compile>
+    <Compile Include="..\TeklaOpenAPIExtensionMethods\Drawing\DrawingObjectSelectorExtensions.cs">
+      <Link>references\DrawingObjectSelectorExtensions.cs</Link>
     </Compile>
     <Compile Include="..\TeklaOpenAPIExtensionMethods\Drawing\ViewBaseExtension.cs">
       <Link>references\ViewBaseExtension.cs</Link>
