feat(IEnumeratorExtensions): Add extension method to create readonly collections from generic enumerators

--- a/TeklaOpenAPIExtensionMethods/TeklaOpenAPIExtensionMethods/TeklaOpenAPIExtensionMethods.csproj
+++ b/TeklaOpenAPIExtensionMethods/TeklaOpenAPIExtensionMethods/TeklaOpenAPIExtensionMethods.csproj
@@ -81,6 +81,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Collections\IEnumeratorExtensions.cs" />
     <Compile Include="Drawing\DrawingExtensions.cs" />
     <Compile Include="Drawing\DrawingObjectExtensions.cs" />
     <Compile Include="Drawing\DrawingObjectSelectorExtensions.cs" />
