chore(TestProject): Add IEnumeratorExtensions as link in test project

--- a/TeklaOpenAPIExtensionMethods/TestProject/TestProject.csproj
+++ b/TeklaOpenAPIExtensionMethods/TestProject/TestProject.csproj
@@ -83,6 +83,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\TeklaOpenAPIExtensionMethods\Collections\IEnumeratorExtensions.cs">
+      <Link>references\IEnumeratorExtensions.cs</Link>
+    </Compile>
     <Compile Include="..\TeklaOpenAPIExtensionMethods\Drawing\DrawingEnumeratorExtension.cs">
       <Link>references\DrawingEnumeratorExtension.cs</Link>
     </Compile>
