feat(ContainerView): Add extension methods to get views and all views of a specific type from container view

--- a/TeklaOpenAPIExtensionMethods/TeklaOpenAPIExtensionMethods/TeklaOpenAPIExtensionMethods.csproj
+++ b/TeklaOpenAPIExtensionMethods/TeklaOpenAPIExtensionMethods/TeklaOpenAPIExtensionMethods.csproj
@@ -82,6 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Collections\IEnumeratorExtensions.cs" />
+    <Compile Include="Drawing\ContainerViewExtensions.cs" />
     <Compile Include="Drawing\DrawingExtensions.cs" />
     <Compile Include="Drawing\DrawingObjectExtensions.cs" />
     <Compile Include="Drawing\DrawingObjectSelectorExtensions.cs" />
