chore(TestProject): Add ViewExtensions as link in test project

--- a/TeklaOpenAPIExtensionMethods/TestProject/TestProject.csproj
+++ b/TeklaOpenAPIExtensionMethods/TestProject/TestProject.csproj
@@ -107,6 +107,9 @@
     <Compile Include="..\TeklaOpenAPIExtensionMethods\Drawing\ViewBaseExtension.cs">
       <Link>references\ViewBaseExtension.cs</Link>
     </Compile>
+    <Compile Include="..\TeklaOpenAPIExtensionMethods\Drawing\ViewExtensions.cs">
+      <Link>references\ViewExtensions.cs</Link>
+    </Compile>
     <Compile Include="..\TeklaOpenAPIExtensionMethods\Geometry3d\CoordinateSystemExtensions.cs">
       <Link>references\CoordinateSystemExtensions.cs</Link>
     </Compile>
