--- a/TeklaOpenAPIExtensionMethods/TeklaOpenAPIExtensionMethods/TeklaOpenAPIExtensionMethods.csproj
+++ b/TeklaOpenAPIExtensionMethods/TeklaOpenAPIExtensionMethods/TeklaOpenAPIExtensionMethods.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Drawing\DrawingExtensions.cs" />
     <Compile Include="Drawing\DrawingObjectExtensions.cs" />
     <Compile Include="Drawing\DrawingObjectSelectorExtensions.cs" />
+    <Compile Include="Drawing\DrawingSelectorExtensions.cs" />
     <Compile Include="Drawing\ViewBaseExtension.cs" />
     <Compile Include="Drawing\DrawingEnumeratorExtension.cs" />
     <Compile Include="Drawing\DrawingObjectEnumeratorExtension.cs" />
@@ -114,6 +115,7 @@
   <ItemGroup>
     <None Include="Readme.md" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
